--- a/KMeans.ipynb
+++ b/KMeans.ipynb
@@ -32,100 +32,45 @@
       "Cluster Analysis for K:\n",
       "\n",
       "Cluster 0:\n",
-      "Average predicted points: 22.73\n",
-      "Range: 19.58 - 25.32\n",
+      "Average predicted points: 6.35\n",
+      "Range: 5.59 - 7.24\n",
       "Number of players: 8\n",
       "Players: Brandon McManus, Cairo Santos, Chase McLaughlin, Eddy Piñeiro, Graham Gano, Jake Elliott, Jason Myers, Younghoe Koo\n",
       "\n",
       "Cluster Averages:\n",
       "Games_Played: 125.75\n",
-      "sample_weight: 1.00\n",
-      "predicted_points: 22.73\n",
+      "predicted_points: 6.35\n",
       "FG%_avg: 72.43\n",
       "XP%_avg: 82.68\n",
       "Pts_avg: 6.72\n",
       "\n",
       "Cluster 1:\n",
-      "Average predicted points: 5.75\n",
-      "Range: 1.10 - 9.67\n",
+      "Average predicted points: 2.13\n",
+      "Range: 0.87 - 3.05\n",
       "Number of players: 4\n",
       "Players: Austin Seibert, Chad Ryland, John Parker Romo, Joshua Karty\n",
       "\n",
       "Cluster Averages:\n",
       "Games_Played: 19.25\n",
-      "sample_weight: 0.45\n",
-      "predicted_points: 5.75\n",
+      "predicted_points: 2.13\n",
       "FG%_avg: 48.72\n",
       "XP%_avg: 52.59\n",
       "Pts_avg: 4.83\n",
       "\n",
       "Cluster 2:\n",
-      "Average predicted points: 8.75\n",
-      "Range: 3.06 - 11.92\n",
+      "Average predicted points: 3.36\n",
+      "Range: 2.55 - 4.17\n",
       "Number of players: 4\n",
       "Players: Blake Grupe, Brandon Aubrey, Jake Bates, Jake Moody\n",
       "\n",
       "Cluster Averages:\n",
       "Games_Played: 22.75\n",
-      "sample_weight: 0.57\n",
-      "predicted_points: 8.75\n",
+      "predicted_points: 3.36\n",
       "FG%_avg: 77.28\n",
       "XP%_avg: 88.75\n",
       "Pts_avg: 7.88\n",
       "\n",
-      "Processing QB...\n",
-      "\n",
-      "Cluster Analysis for QB:\n",
-      "\n",
-      "Cluster 0:\n",
-      "Average predicted points: 6.45\n",
-      "Range: 0.58 - 12.30\n",
-      "Number of players: 11\n",
-      "Players: Brock Purdy, Bryce Young, Caleb Williams, Geno Smith, Jayden Daniels, Jimmy Garoppolo, Jordan Love, Kenny Pickett, Marcus Mariota, Sam Darnold, Sam Howell\n",
-      "\n",
-      "Cluster Averages:\n",
-      "Games_Played: 45.36\n",
-      "sample_weight: 0.71\n",
-      "predicted_points: 6.45\n",
-      "Yds_avg: 132.83\n",
-      "TD_avg: 0.71\n",
-      "Int_avg: 0.43\n",
-      "Rate_avg: 56.99\n",
-      "FL_avg: 0.10\n",
-      "\n",
-      "Cluster 1:\n",
-      "Average predicted points: 0.62\n",
-      "Range: -0.01 - 3.34\n",
-      "Number of players: 19\n",
-      "Players: Brandon Allen, Brett Rypien, Clayton Tune, Cooper Rush, Drew Lock, Hendon Hooker, Jake Haener, Jeff Driskel, Joshua Dobbs, Kyle Trask, Malik Willis, Michael Penix, Nick Mullens, Spencer Rattler, Stetson Bennett, Tanner McKee, Tommy DeVito, Trey Lance, Tyson Bagent\n",
-      "\n",
-      "Cluster Averages:\n",
-      "Games_Played: 12.84\n",
-      "sample_weight: 0.34\n",
-      "predicted_points: 0.62\n",
-      "Yds_avg: 20.49\n",
-      "TD_avg: 0.10\n",
-      "Int_avg: 0.09\n",
-      "Rate_avg: 13.05\n",
-      "FL_avg: 0.04\n",
-      "\n",
-      "Cluster 2:\n",
-      "Average predicted points: 18.87\n",
-      "Range: 13.83 - 22.41\n",
-      "Number of players: 9\n",
-      "Players: Andy Dalton, Baker Mayfield, Daniel Jones, Derek Carr, Jalen Hurts, Jared Goff, Kirk Cousins, Kyler Murray, Matthew Stafford\n",
-      "\n",
-      "Cluster Averages:\n",
-      "Games_Played: 129.67\n",
-      "sample_weight: 1.00\n",
-      "predicted_points: 18.87\n",
-      "Yds_avg: 202.56\n",
-      "TD_avg: 1.25\n",
-      "Int_avg: 0.62\n",
-      "Rate_avg: 78.07\n",
-      "FL_avg: 0.19\n",
-      "\n",
-      "Processing RB...\n"
+      "Processing QB...\n"
      ]
     },
     {
@@ -145,150 +90,187 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "Cluster Analysis for QB:\n",
+      "\n",
+      "Cluster 0:\n",
+      "Average predicted points: 5.99\n",
+      "Range: 2.11 - 10.90\n",
+      "Number of players: 13\n",
+      "Players: Brock Purdy, Bryce Young, Caleb Williams, Daniel Jones, Geno Smith, Jalen Hurts, Jayden Daniels, Jimmy Garoppolo, Jordan Love, Kyler Murray, Marcus Mariota, Sam Darnold, Sam Howell\n",
+      "\n",
+      "Cluster Averages:\n",
+      "Games_Played: 53.08\n",
+      "predicted_points: 5.99\n",
+      "Yds_avg: 145.29\n",
+      "TD_avg: 0.80\n",
+      "Int_avg: 0.46\n",
+      "FL_avg: 0.13\n",
+      "\n",
+      "Cluster 1:\n",
+      "Average predicted points: 0.63\n",
+      "Range: -0.05 - 2.62\n",
+      "Number of players: 20\n",
+      "Players: Brandon Allen, Brett Rypien, Clayton Tune, Cooper Rush, Drew Lock, Hendon Hooker, Jake Haener, Jeff Driskel, Joshua Dobbs, Kenny Pickett, Kyle Trask, Malik Willis, Michael Penix, Nick Mullens, Spencer Rattler, Stetson Bennett, Tanner McKee, Tommy DeVito, Trey Lance, Tyson Bagent\n",
+      "\n",
+      "Cluster Averages:\n",
+      "Games_Played: 13.55\n",
+      "predicted_points: 0.63\n",
+      "Yds_avg: 24.56\n",
+      "TD_avg: 0.11\n",
+      "Int_avg: 0.10\n",
+      "FL_avg: 0.04\n",
+      "\n",
+      "Cluster 2:\n",
+      "Average predicted points: 12.97\n",
+      "Range: 10.63 - 14.21\n",
+      "Number of players: 6\n",
+      "Players: Andy Dalton, Baker Mayfield, Derek Carr, Jared Goff, Kirk Cousins, Matthew Stafford\n",
+      "\n",
+      "Cluster Averages:\n",
+      "Games_Played: 158.17\n",
+      "predicted_points: 12.97\n",
+      "Yds_avg: 215.60\n",
+      "TD_avg: 1.38\n",
+      "Int_avg: 0.67\n",
+      "FL_avg: 0.18\n",
+      "\n",
+      "Processing RB...\n",
+      "\n",
       "Cluster Analysis for RB:\n",
       "\n",
       "Cluster 0:\n",
-      "Average predicted points: 1.92\n",
-      "Range: 0.43 - 5.46\n",
-      "Number of players: 18\n",
-      "Players: Avery Williams, Cam Akers, Craig Reynolds, DeeJay Dallas, Emari Demercado, Eric Gray, Hunter Luepke, Jeremy McNichols, Jordan Mason, Kenneth Gainwell, Raheem Blackshear, Rico Dowdle, Ronnie Rivers, Roschon Johnson, Travis Homer, Ty Chandler, Tyler Allgeier, Zach Charbonnet\n",
+      "Average predicted points: 4.04\n",
+      "Range: 2.49 - 6.05\n",
+      "Number of players: 5\n",
+      "Players: Bijan Robinson, Bucky Irving, Kyren Williams, Rachaad White, Tyrone Tracy\n",
       "\n",
       "Cluster Averages:\n",
-      "Games_Played: 41.06\n",
-      "sample_weight: 0.82\n",
-      "predicted_points: 1.92\n",
-      "Yds_avg: 13.31\n",
-      "TD_avg: 0.09\n",
-      "Rec_avg: 0.75\n",
-      "FL_avg: 0.02\n",
+      "Games_Played: 25.40\n",
+      "predicted_points: 4.04\n",
+      "Yds_avg: 51.20\n",
+      "TD_avg: 0.35\n",
+      "Rec_avg: 2.69\n",
+      "FL_avg: 0.12\n",
       "\n",
       "Cluster 1:\n",
-      "Average predicted points: 0.22\n",
-      "Range: 0.00 - 0.64\n",
-      "Number of players: 15\n",
-      "Players: Blake Corum, Chris Brooks, Chris Rodriguez, Cody Schrader, Deuce Vaughn, Emanuel Wilson, Isaac Guerendo, Jase McClellan, Jonathon Brooks, Jordan Mims, Kenny McIntosh, Sean Tucker, Sione Vaki, Trey Benson, Will Shipley\n",
+      "Average predicted points: 1.16\n",
+      "Range: 0.00 - 4.19\n",
+      "Number of players: 33\n",
+      "Players: Avery Williams, Blake Corum, Cam Akers, Chris Brooks, Chris Rodriguez, Cody Schrader, Craig Reynolds, DeeJay Dallas, Deuce Vaughn, Emanuel Wilson, Emari Demercado, Eric Gray, Hunter Luepke, Isaac Guerendo, Jase McClellan, Jeremy McNichols, Jonathon Brooks, Jordan Mason, Jordan Mims, Kenneth Gainwell, Kenny McIntosh, Raheem Blackshear, Rico Dowdle, Ronnie Rivers, Roschon Johnson, Sean Tucker, Sione Vaki, Travis Homer, Trey Benson, Ty Chandler, Tyler Allgeier, Will Shipley, Zach Charbonnet\n",
       "\n",
       "Cluster Averages:\n",
-      "Games_Played: 11.20\n",
-      "sample_weight: 0.27\n",
-      "predicted_points: 0.22\n",
-      "Yds_avg: 6.96\n",
-      "TD_avg: 0.02\n",
-      "Rec_avg: 0.19\n",
+      "Games_Played: 27.48\n",
+      "predicted_points: 1.16\n",
+      "Yds_avg: 10.42\n",
+      "TD_avg: 0.06\n",
+      "Rec_avg: 0.50\n",
       "FL_avg: 0.01\n",
       "\n",
       "Cluster 2:\n",
-      "Average predicted points: 8.41\n",
-      "Range: 0.95 - 13.10\n",
-      "Number of players: 19\n",
-      "Players: Aaron Jones, Alvin Kamara, Austin Ekeler, Bijan Robinson, Bucky Irving, Christian McCaffrey, Chuba Hubbard, David Montgomery, Devin Singletary, Ezekiel Elliott, Jahmyr Gibbs, Jamaal Williams, James Conner, Josh Jacobs, Kenneth Walker III, Kyren Williams, Rachaad White, Saquon Barkley, Tyrone Tracy\n",
+      "Average predicted points: 9.64\n",
+      "Range: 6.46 - 13.07\n",
+      "Number of players: 14\n",
+      "Players: Aaron Jones, Alvin Kamara, Austin Ekeler, Christian McCaffrey, Chuba Hubbard, David Montgomery, Devin Singletary, Ezekiel Elliott, Jahmyr Gibbs, Jamaal Williams, James Conner, Josh Jacobs, Kenneth Walker III, Saquon Barkley\n",
       "\n",
       "Cluster Averages:\n",
-      "Games_Played: 72.26\n",
-      "sample_weight: 0.86\n",
-      "predicted_points: 8.41\n",
-      "Yds_avg: 51.93\n",
-      "TD_avg: 0.41\n",
-      "Rec_avg: 2.64\n",
-      "FL_avg: 0.08\n",
+      "Games_Played: 89.00\n",
+      "predicted_points: 9.64\n",
+      "Yds_avg: 52.19\n",
+      "TD_avg: 0.44\n",
+      "Rec_avg: 2.63\n",
+      "FL_avg: 0.06\n",
       "\n",
       "Processing TE...\n",
       "\n",
       "Cluster Analysis for TE:\n",
       "\n",
       "Cluster 0:\n",
-      "Average predicted points: 1.84\n",
-      "Range: 0.36 - 4.16\n",
-      "Number of players: 16\n",
-      "Players: Brock Wright, Charlie Woerner, Chris Manhertz, Colby Parkinson, Daniel Bellinger, Eric Saubert, Foster Moreau, Grant Calcaterra, John Bates, Johnny Mundt, Josh Oliver, Ko Kieft, Marcedes Lewis, Pharaoh Brown, Ross Dwelley, Tommy Tremble\n",
+      "Average predicted points: 0.74\n",
+      "Range: 0.00 - 2.36\n",
+      "Number of players: 33\n",
+      "Players: AJ Barner, Ben Sims, Ben Sinnott, Brady Russell, Brayden Willis, Brevyn Spann-Ford, Brock Wright, Charlie Woerner, Chris Manhertz, Colby Parkinson, Dallin Holker, Daniel Bellinger, Davis Allen, Devin Culp, Elijah Higgins, Eric Saubert, Feleipe Franks, Grant Calcaterra, Hunter Long, Jake Tonges, John Bates, John FitzPatrick, Johnny Mundt, Josh Oliver, Ko Kieft, Luke Schoonmaker, Payne Durham, Pharaoh Brown, Ross Dwelley, Shane Zylstra, Theo Johnson, Tip Reiman, Travis Vokolek\n",
       "\n",
       "Cluster Averages:\n",
-      "Games_Played: 85.00\n",
-      "sample_weight: 0.97\n",
-      "predicted_points: 1.84\n",
-      "Rec_avg: 0.76\n",
-      "Yds_avg: 7.86\n",
-      "TD_avg: 0.06\n",
-      "FL_avg: 0.01\n",
-      "\n",
-      "Cluster 1:\n",
-      "Average predicted points: 0.28\n",
-      "Range: -0.04 - 1.29\n",
-      "Number of players: 20\n",
-      "Players: AJ Barner, Ben Sims, Ben Sinnott, Brady Russell, Brayden Willis, Brevyn Spann-Ford, Dallin Holker, Davis Allen, Devin Culp, Elijah Higgins, Feleipe Franks, Hunter Long, Jake Tonges, John FitzPatrick, Luke Schoonmaker, Payne Durham, Shane Zylstra, Theo Johnson, Tip Reiman, Travis Vokolek\n",
-      "\n",
-      "Cluster Averages:\n",
-      "Games_Played: 16.80\n",
-      "sample_weight: 0.41\n",
-      "predicted_points: 0.28\n",
-      "Rec_avg: 0.41\n",
-      "Yds_avg: 3.94\n",
-      "TD_avg: 0.03\n",
+      "Games_Played: 38.70\n",
+      "predicted_points: 0.74\n",
+      "Rec_avg: 0.50\n",
+      "Yds_avg: 4.88\n",
+      "TD_avg: 0.04\n",
       "FL_avg: 0.00\n",
       "\n",
-      "Cluster 2:\n",
-      "Average predicted points: 7.00\n",
-      "Range: 4.04 - 11.81\n",
-      "Number of players: 14\n",
-      "Players: Cade Otton, Cole Kmet, Dallas Goedert, George Kittle, Gerald Everett, Jake Ferguson, Juwan Johnson, Kyle Pitts, Noah Fant, Sam LaPorta, Taysom Hill, Trey McBride, Tucker Kraft, Zach Ertz\n",
+      "Cluster 1:\n",
+      "Average predicted points: 4.47\n",
+      "Range: 2.37 - 7.73\n",
+      "Number of players: 9\n",
+      "Players: Cade Otton, Dallas Goedert, Foster Moreau, Gerald Everett, Jake Ferguson, Marcedes Lewis, Taysom Hill, Tommy Tremble, Tucker Kraft\n",
       "\n",
       "Cluster Averages:\n",
-      "Games_Played: 74.57\n",
-      "sample_weight: 0.93\n",
-      "predicted_points: 7.00\n",
-      "Rec_avg: 2.95\n",
-      "Yds_avg: 33.74\n",
-      "TD_avg: 0.23\n",
-      "FL_avg: 0.02\n",
+      "Games_Played: 93.67\n",
+      "predicted_points: 4.47\n",
+      "Rec_avg: 2.05\n",
+      "Yds_avg: 23.15\n",
+      "TD_avg: 0.19\n",
+      "FL_avg: 0.03\n",
+      "\n",
+      "Cluster 2:\n",
+      "Average predicted points: 7.90\n",
+      "Range: 4.53 - 11.49\n",
+      "Number of players: 8\n",
+      "Players: Cole Kmet, George Kittle, Juwan Johnson, Kyle Pitts, Noah Fant, Sam LaPorta, Trey McBride, Zach Ertz\n",
+      "\n",
+      "Cluster Averages:\n",
+      "Games_Played: 77.50\n",
+      "predicted_points: 7.90\n",
+      "Rec_avg: 3.35\n",
+      "Yds_avg: 38.41\n",
+      "TD_avg: 0.24\n",
+      "FL_avg: 0.01\n",
       "\n",
       "Processing WR...\n",
       "\n",
       "Cluster Analysis for WR:\n",
       "\n",
       "Cluster 0:\n",
-      "Average predicted points: 3.51\n",
-      "Range: 0.48 - 8.04\n",
-      "Number of players: 34\n",
-      "Players: Brandon Powell, Chris Conley, Christian Watson, Darius Slayton, David Moore, DeAndre Carter, Demarcus Robinson, Dontayvion Wicks, Dyami Brown, Greg Dortch, Ihmir Smith-Marsette, Jahan Dotson, Jalen Nailor, Jalen Tolbert, Jameson Williams, Jauan Jennings, Jonathan Mingo, KaVontae Turpin, Kalif Raymond, KhaDarel Hodge, Marquez Valdes-Scantling, Michael Wilson, Noah Brown, Olamide Zaccheaus, Ray-Ray McCloud, Romeo Doubs, Sterling Shepard, Tim Patrick, Trent Sherfield, Trey Palmer, Tutu Atwell, Tyler Johnson, Zach Pascal, Zay Jones\n",
+      "Average predicted points: 1.33\n",
+      "Range: 0.00 - 4.17\n",
+      "Number of players: 48\n",
+      "Players: Ainias Smith, Bo Melton, Brandon Powell, Bryce Ford-Wheaton, Casey Washington, Chris Conley, Cody White, Dareke Young, David Moore, DeAndre Carter, Deven Thompkins, Dyami Brown, Greg Dortch, Ihmir Smith-Marsette, Jacob Cowing, Jake Bobo, Jalen Brooks, Jalen Coker, Jalen McMillan, Jalen Nailor, Jalen Tolbert, Jalin Hyatt, Jameson Williams, Johnny Wilson, Jonathan Mingo, Jordan Whittington, KaVontae Turpin, Kalif Raymond, KhaDarel Hodge, Luke McCaffrey, Malik Heath, Mason Tipton, Noah Brown, Olamide Zaccheaus, Rakim Jarrett, Ray-Ray McCloud, Ricky Pearsall, Ronnie Bell, Ryan Flournoy, Ryan Miller, Tim Patrick, Trent Sherfield, Trey Palmer, Tutu Atwell, Tyler Johnson, Tyler Scott, Xavier Smith, Xavier Weaver\n",
       "\n",
       "Cluster Averages:\n",
-      "Games_Played: 67.24\n",
-      "sample_weight: 0.91\n",
-      "predicted_points: 3.51\n",
-      "Rec_avg: 1.52\n",
-      "Yds_avg: 19.38\n",
-      "TD_avg: 0.13\n",
+      "Games_Played: 37.10\n",
+      "predicted_points: 1.33\n",
+      "Rec_avg: 0.84\n",
+      "Yds_avg: 10.03\n",
+      "TD_avg: 0.05\n",
       "FL_avg: 0.02\n",
       "\n",
       "Cluster 1:\n",
-      "Average predicted points: 0.35\n",
-      "Range: -0.01 - 1.28\n",
-      "Number of players: 28\n",
-      "Players: Ainias Smith, Bo Melton, Bryce Ford-Wheaton, Casey Washington, Cody White, Dareke Young, Deven Thompkins, Jacob Cowing, Jake Bobo, Jalen Brooks, Jalen Coker, Jalen McMillan, Jalin Hyatt, Johnny Wilson, Jordan Whittington, Luke McCaffrey, Malik Heath, Mason Tipton, Rakim Jarrett, Ricky Pearsall, Rome Odunze, Ronnie Bell, Ryan Flournoy, Ryan Miller, Tyler Scott, Xavier Legette, Xavier Smith, Xavier Weaver\n",
+      "Average predicted points: 4.65\n",
+      "Range: 2.15 - 8.17\n",
+      "Number of players: 18\n",
+      "Players: Christian Watson, Darius Slayton, Darnell Mooney, Demarcus Robinson, Dontayvion Wicks, Jahan Dotson, Jauan Jennings, Jaxon Smith-Njigba, Malik Nabers, Marquez Valdes-Scantling, Michael Wilson, Puka Nacua, Rome Odunze, Romeo Doubs, Sterling Shepard, Xavier Legette, Zach Pascal, Zay Jones\n",
       "\n",
       "Cluster Averages:\n",
-      "Games_Played: 13.32\n",
-      "sample_weight: 0.32\n",
-      "predicted_points: 0.35\n",
-      "Rec_avg: 0.76\n",
-      "Yds_avg: 8.72\n",
-      "TD_avg: 0.04\n",
+      "Games_Played: 56.06\n",
+      "predicted_points: 4.65\n",
+      "Rec_avg: 2.87\n",
+      "Yds_avg: 35.82\n",
+      "TD_avg: 0.22\n",
       "FL_avg: 0.01\n",
       "\n",
       "Cluster 2:\n",
-      "Average predicted points: 10.19\n",
-      "Range: 1.28 - 16.80\n",
-      "Number of players: 18\n",
-      "Players: Adam Thielen, Allen Robinson, CeeDee Lamb, Cooper Kupp, Darnell Mooney, DeVonta Smith, Deebo Samuel, Drake London, Jaxon Smith-Njigba, Jayden Reed, Jordan Addison, Justin Jefferson, Keenan Allen, Malik Nabers, Mike Evans, Puka Nacua, Terry McLaurin, Tyler Lockett\n",
+      "Average predicted points: 12.28\n",
+      "Range: 7.93 - 15.97\n",
+      "Number of players: 14\n",
+      "Players: Adam Thielen, Allen Robinson, CeeDee Lamb, Cooper Kupp, DeVonta Smith, Deebo Samuel, Drake London, Jayden Reed, Jordan Addison, Justin Jefferson, Keenan Allen, Mike Evans, Terry McLaurin, Tyler Lockett\n",
       "\n",
       "Cluster Averages:\n",
-      "Games_Played: 81.00\n",
-      "sample_weight: 0.87\n",
-      "predicted_points: 10.19\n",
-      "Rec_avg: 4.49\n",
-      "Yds_avg: 58.14\n",
-      "TD_avg: 0.35\n",
-      "FL_avg: 0.02\n",
+      "Games_Played: 94.79\n",
+      "predicted_points: 12.28\n",
+      "Rec_avg: 4.41\n",
+      "Yds_avg: 58.80\n",
+      "TD_avg: 0.38\n",
+      "FL_avg: 0.03\n",
       "\n",
       "Clustering analysis complete.\n"
      ]
